syntax = "proto3";

option csharp_namespace = "IdentityServer.Protos";

service User {
  rpc GetUserById (UserRequest) returns (UserResponse);
  rpc GetUsersByIds (UsersRequest) returns (UsersResponse);
}

message UserRequest {
  int32 userId = 1;
}

message UsersRequest {
  repeated UserRequest data = 1;
}

message UserResponse {
  int32 id = 1;
  string firstName = 2;
  string lastName = 3;
  optional string avatar = 4;
}

message UsersResponse {
  repeated UserResponse data = 1;
}